--- a/IDE/Forms/editoroptions.lfm
+++ b/IDE/Forms/editoroptions.lfm
@@ -1,7 +1,7 @@
 object EditorConf: TEditorConf
-  Left = 428
+  Left = 430
   Height = 682
-  Top = 177
+  Top = 246
   Width = 747
   BorderStyle = bsToolWindow
   Caption = 'AAL Editor Optionen'
@@ -10,6 +10,7 @@ object EditorConf: TEditorConf
   OnCreate = FormCreate
   OnDestroy = FormDestroy
   OnShow = FormShow
+  Position = poScreenCenter
   LCLVersion = '1.7'
   object ModalPanel: TPanel
     Left = 0
@@ -88,15 +89,10 @@ object EditorConf: TEditorConf
         Left = 512
         Height = 250
         ClientHeight = 250
-        inherited CodeExplorerHead: TPanel
-          ClientHeight = 30
-          ClientWidth = 231
-          inherited CloseCodeExplorerButton: TSpeedButton
-            Left = 201
-          end
-        end
         inherited CodeExplorer: TTreeView
           Height = 216
+          MultiSelectStyle = [msControlSelect]
+          OnCustomDrawItem = nil
         end
       end
     end
@@ -371,7 +367,7 @@ object EditorConf: TEditorConf
         object ScrollPastEOLBox: TCheckBox
           Left = 376
           Height = 29
-          Top = 40
+          Top = 80
           Width = 277
           Caption = 'Über Zeilenende Hinausscrollen'
           OnChange = ScrollPastEOLBoxChange
@@ -380,7 +376,7 @@ object EditorConf: TEditorConf
         object CaretAlwaysVisibleBox: TCheckBox
           Left = 376
           Height = 29
-          Top = 76
+          Top = 116
           Width = 205
           Caption = 'Cursor immer sichtbar'
           OnChange = CaretAlwaysVisibleBoxChange
@@ -389,7 +385,7 @@ object EditorConf: TEditorConf
         object Label10: TLabel
           Left = 376
           Height = 25
-          Top = 120
+          Top = 153
           Width = 80
           Caption = 'Tab Breite:'
           ParentColor = False
@@ -397,7 +393,7 @@ object EditorConf: TEditorConf
         object TabLenEdit: TEdit
           Left = 544
           Height = 33
-          Top = 120
+          Top = 153
           Width = 160
           Alignment = taRightJustify
           NumbersOnly = True
@@ -408,7 +404,7 @@ object EditorConf: TEditorConf
         object TooltipColorButton: TButton
           Left = 704
           Height = 25
-          Top = 177
+          Top = 201
           Width = 32
           Caption = '...'
           OnClick = TooltipColorButtonClick
@@ -417,7 +413,7 @@ object EditorConf: TEditorConf
         object TooltipColorPicklist: TColorBox
           Left = 544
           Height = 26
-          Top = 176
+          Top = 200
           Width = 160
           DefaultColorColor = clWhite
           NoneColorColor = clNone
@@ -429,7 +425,7 @@ object EditorConf: TEditorConf
         object Label25: TLabel
           Left = 376
           Height = 25
-          Top = 177
+          Top = 201
           Width = 106
           Caption = 'Tooltip Farbe:'
           ParentColor = False
@@ -437,7 +433,7 @@ object EditorConf: TEditorConf
         object Label26: TLabel
           Left = 376
           Height = 25
-          Top = 209
+          Top = 233
           Width = 154
           Caption = 'Tooltip Schriftfarbe:'
           ParentColor = False
@@ -445,7 +441,7 @@ object EditorConf: TEditorConf
         object TooltipForeColorPicklist: TColorBox
           Left = 544
           Height = 26
-          Top = 208
+          Top = 232
           Width = 160
           NoneColorColor = clNone
           ItemHeight = 20
@@ -455,7 +451,7 @@ object EditorConf: TEditorConf
         object TooltipForeColorButton: TButton
           Left = 704
           Height = 25
-          Top = 209
+          Top = 233
           Width = 32
           Caption = '...'
           OnClick = TooltipForeColorButtonClick
@@ -464,7 +460,7 @@ object EditorConf: TEditorConf
         object Label27: TLabel
           Left = 376
           Height = 25
-          Top = 256
+          Top = 280
           Width = 127
           Caption = 'Editor Schriftart:'
           ParentColor = False
@@ -472,11 +468,38 @@ object EditorConf: TEditorConf
         object EditorFontButton: TButton
           Left = 544
           Height = 25
-          Top = 256
+          Top = 280
           Width = 187
           Caption = 'Courier New'
           OnClick = EditorFontButtonClick
           TabOrder = 24
+        end
+        object TextColorPicklist: TColorBox
+          Left = 544
+          Height = 26
+          Top = 40
+          Width = 160
+          NoneColorColor = clNone
+          ItemHeight = 20
+          OnChange = TextColorPicklistChange
+          TabOrder = 25
+        end
+        object TextColorButton: TButton
+          Left = 704
+          Height = 25
+          Top = 40
+          Width = 32
+          Caption = '...'
+          OnClick = TextColorButtonClick
+          TabOrder = 26
+        end
+        object Label31: TLabel
+          Left = 377
+          Height = 25
+          Top = 43
+          Width = 82
+          Caption = 'Text Farbe:'
+          ParentColor = False
         end
       end
       object HighlightOptionsTab: TTabSheet
