--- a/IDE/Forms/formeditoroptions.lfm
+++ b/IDE/Forms/formeditoroptions.lfm
@@ -1,8 +1,159 @@
 object FormEditorOptionsForm: TFormEditorOptionsForm
-  Left = 404
+  Left = 452
   Height = 240
-  Top = 203
-  Width = 320
+  Top = 456
+  Width = 454
   Caption = 'Formular Editor Optionen'
+  ClientHeight = 240
+  ClientWidth = 454
+  Position = poScreenCenter
   LCLVersion = '1.7'
+  object Label1: TLabel
+    Left = 0
+    Height = 25
+    Top = 8
+    Width = 137
+    Caption = 'Objekt Inspektor:'
+    ParentColor = False
+  end
+  object OISideBox: TToggleBox
+    Left = 168
+    Height = 25
+    Top = 8
+    Width = 92
+    Caption = 'Rechts'
+    Checked = True
+    OnChange = OISideBoxChange
+    State = cbChecked
+    TabOrder = 0
+  end
+  object Label2: TLabel
+    Left = 0
+    Height = 25
+    Top = 51
+    Width = 100
+    Caption = 'Hintergrund:'
+    ParentColor = False
+  end
+  object BGColorPicklist: TColorBox
+    Left = 168
+    Height = 26
+    Top = 48
+    Width = 160
+    DefaultColorColor = clWhite
+    NoneColorColor = clNone
+    Selected = clWhite
+    ItemHeight = 20
+    OnChange = BGColorPicklistChange
+    TabOrder = 1
+  end
+  object BGColorBtn: TButton
+    Left = 328
+    Height = 25
+    Top = 48
+    Width = 32
+    Caption = '...'
+    OnClick = BGColorBtnClick
+    TabOrder = 2
+  end
+  object ForeColorButton: TButton
+    Left = 328
+    Height = 25
+    Top = 88
+    Width = 32
+    Caption = '...'
+    OnClick = ForeColorButtonClick
+    TabOrder = 3
+  end
+  object ForeColorPicklist: TColorBox
+    Left = 168
+    Height = 26
+    Top = 88
+    Width = 160
+    NoneColorColor = clNone
+    ItemHeight = 20
+    OnChange = BGColorPicklistChange
+    TabOrder = 4
+  end
+  object Label3: TLabel
+    Left = 0
+    Height = 25
+    Top = 91
+    Width = 105
+    Caption = 'Vordergrund:'
+    ParentColor = False
+  end
+  object TBColorButton: TButton
+    Left = 328
+    Height = 25
+    Top = 128
+    Width = 32
+    Caption = '...'
+    OnClick = TBColorButtonClick
+    TabOrder = 5
+  end
+  object TBColorPicklist: TColorBox
+    Left = 168
+    Height = 26
+    Top = 128
+    Width = 160
+    DefaultColorColor = clBtnFace
+    NoneColorColor = clNone
+    Selected = clBtnFace
+    ItemHeight = 20
+    OnChange = BGColorPicklistChange
+    TabOrder = 6
+  end
+  object Label4: TLabel
+    Left = 0
+    Height = 25
+    Top = 131
+    Width = 125
+    Caption = 'Toolbox Button:'
+    ParentColor = False
+  end
+  object Button2: TButton
+    Left = 248
+    Height = 32
+    Top = 200
+    Width = 99
+    Caption = 'Ok'
+    ModalResult = 1
+    TabOrder = 7
+  end
+  object Button1: TButton
+    Left = 352
+    Height = 32
+    Top = 200
+    Width = 99
+    Caption = 'Abbrechen'
+    ModalResult = 2
+    TabOrder = 8
+  end
+  object ColorDialog1: TColorDialog
+    Color = clBlack
+    CustomColors.Strings = (
+      'ColorA=000000'
+      'ColorB=000080'
+      'ColorC=008000'
+      'ColorD=008080'
+      'ColorE=800000'
+      'ColorF=800080'
+      'ColorG=808000'
+      'ColorH=808080'
+      'ColorI=C0C0C0'
+      'ColorJ=0000FF'
+      'ColorK=00FF00'
+      'ColorL=00FFFF'
+      'ColorM=FF0000'
+      'ColorN=FF00FF'
+      'ColorO=FFFF00'
+      'ColorP=FFFFFF'
+      'ColorQ=C0DCC0'
+      'ColorR=F0CAA6'
+      'ColorS=F0FBFF'
+      'ColorT=A4A0A0'
+    )
+    left = 312
+  end
 end
