--- a/IDE/Forms/formeditoroptions.lfm
+++ b/IDE/Forms/formeditoroptions.lfm
@@ -1,18 +1,18 @@
 object FormEditorOptionsForm: TFormEditorOptionsForm
-  Left = 452
-  Height = 240
-  Top = 456
+  Left = 346
+  Height = 296
+  Top = 183
   Width = 454
   Caption = 'Formular Editor Optionen'
-  ClientHeight = 240
+  ClientHeight = 296
   ClientWidth = 454
   Position = poScreenCenter
   LCLVersion = '1.7'
   object Label1: TLabel
     Left = 0
-    Height = 25
+    Height = 15
     Top = 8
-    Width = 137
+    Width = 90
     Caption = 'Objekt Inspektor:'
     ParentColor = False
   end
@@ -29,9 +29,9 @@ object FormEditorOptionsForm: TFormEditorOptionsForm
   end
   object Label2: TLabel
     Left = 0
-    Height = 25
+    Height = 15
     Top = 51
-    Width = 100
+    Width = 68
     Caption = 'Hintergrund:'
     ParentColor = False
   end
@@ -77,9 +77,9 @@ object FormEditorOptionsForm: TFormEditorOptionsForm
   end
   object Label3: TLabel
     Left = 0
-    Height = 25
+    Height = 15
     Top = 91
-    Width = 105
+    Width = 69
     Caption = 'Vordergrund:'
     ParentColor = False
   end
@@ -106,16 +106,16 @@ object FormEditorOptionsForm: TFormEditorOptionsForm
   end
   object Label4: TLabel
     Left = 0
-    Height = 25
+    Height = 15
     Top = 131
-    Width = 125
+    Width = 84
     Caption = 'Toolbox Button:'
     ParentColor = False
   end
   object Button2: TButton
     Left = 248
     Height = 32
-    Top = 200
+    Top = 248
     Width = 99
     Caption = 'Ok'
     ModalResult = 1
@@ -124,11 +124,56 @@ object FormEditorOptionsForm: TFormEditorOptionsForm
   object Button1: TButton
     Left = 352
     Height = 32
-    Top = 200
+    Top = 248
     Width = 99
     Caption = 'Abbrechen'
     ModalResult = 2
     TabOrder = 8
+  end
+  object Label5: TLabel
+    Left = 0
+    Height = 15
+    Top = 176
+    Width = 35
+    Caption = 'Raster:'
+    ParentColor = False
+  end
+  object RasterBox: TCheckBox
+    Left = 168
+    Height = 19
+    Top = 174
+    Width = 20
+    Checked = True
+    State = cbChecked
+    TabOrder = 9
+  end
+  object Label6: TLabel
+    Left = 192
+    Height = 15
+    Top = 176
+    Width = 35
+    Caption = 'Größe:'
+    ParentColor = False
+  end
+  object RasterSizeEdit: TEdit
+    Left = 248
+    Height = 23
+    Top = 174
+    Width = 80
+    Alignment = taRightJustify
+    NumbersOnly = True
+    TabOrder = 10
+    Text = '4'
+  end
+  object HelpLineBox: TCheckBox
+    Left = 168
+    Height = 19
+    Top = 216
+    Width = 73
+    Caption = 'Hilfslinien'
+    Checked = True
+    State = cbChecked
+    TabOrder = 11
   end
   object ColorDialog1: TColorDialog
     Color = clBlack
