--- a/IDE/Forms/idemainform.lfm
+++ b/IDE/Forms/idemainform.lfm
@@ -1,11 +1,11 @@
 object MainForm: TMainForm
-  Left = 378
+  Left = 41
   Height = 647
-  Top = 150
+  Top = 6
   Width = 1260
   ActiveControl = EditorManager1.EditorControl
   Caption = 'AAL IDE'
-  ClientHeight = 617
+  ClientHeight = 627
   ClientWidth = 1260
   Color = clBtnFace
   Menu = MainFormMenu
@@ -18,32 +18,41 @@ object MainForm: TMainForm
   WindowState = wsMaximized
   inline EditorManager1: TEditorManager
     Left = 347
-    Height = 485
+    Height = 495
     Top = 36
     Width = 913
     Align = alClient
-    ClientHeight = 485
+    ClientHeight = 495
     ClientWidth = 913
     inherited EditorControl: TPageControl
-      Height = 485
+      Height = 495
       Width = 913
     end
   end
   inline ProjectInspector1: TProjectInspector
-    Height = 485
+    Height = 495
     Top = 36
     Align = alLeft
-    ClientHeight = 485
+    ClientHeight = 495
     TabOrder = 1
     inherited ProjectFileTreeView: TTreeView
-      Height = 249
+      Height = 269
+      Top = 47
       DefaultItemHeight = 32
     end
     inherited FileInfoPanel: TPanel
-      Top = 306
+      Top = 316
+      inherited PathEdit: TLabeledEdit
+        Height = 23
+        EditLabel.Height = 15
+        EditLabel.Top = 6
+      end
       inherited AddButton: TButton
         OnClick = nil
       end
+    end
+    inherited TreeFilterEdit1: TTreeFilterEdit
+      Height = 23
     end
   end
   object ToolBar1: TToolBar
@@ -961,13 +970,13 @@ object MainForm: TMainForm
         end
         object SelectModeBox: TComboBox
           Left = 80
-          Height = 33
+          Height = 23
           Hint = 'Modus'
-          Top = -2
+          Top = 3
           Width = 100
           Anchors = [akLeft]
           AutoSize = False
-          ItemHeight = 25
+          ItemHeight = 15
           ItemIndex = 0
           Items.Strings = (
             'Debug'
@@ -985,7 +994,7 @@ object MainForm: TMainForm
   object OutputBox: TListBox
     Left = 0
     Height = 96
-    Top = 521
+    Top = 531
     Width = 1260
     Align = alBottom
     ItemHeight = 0
