--- a/IDE/Forms/idemainform.lfm
+++ b/IDE/Forms/idemainform.lfm
@@ -1,11 +1,11 @@
 object MainForm: TMainForm
-  Left = 426
-  Height = 617
-  Top = 195
+  Left = 42
+  Height = 597
+  Top = 51
   Width = 1260
   ActiveControl = EditorManager1.EditorControl
   Caption = 'AET'
-  ClientHeight = 617
+  ClientHeight = 597
   ClientWidth = 1260
   Color = clBtnFace
   Menu = MainFormMenu
@@ -17,39 +17,48 @@ object MainForm: TMainForm
   Visible = False
   inline EditorManager1: TEditorManager
     Left = 347
-    Height = 597
+    Height = 582
     Top = 36
-    Width = 957
+    Width = 977
     Align = alClient
-    ClientHeight = 597
-    ClientWidth = 957
+    ClientHeight = 582
+    ClientWidth = 977
     inherited EditorControl: TPageControl
-      Height = 597
-      Width = 957
+      Height = 582
+      Width = 977
     end
   end
   inline ProjectInspector1: TProjectInspector
-    Height = 597
+    Height = 582
     Top = 36
     Align = alLeft
-    ClientHeight = 597
+    ClientHeight = 582
     TabOrder = 1
     inherited ProjectFileTreeView: TTreeView
-      Height = 361
+      Height = 356
+      Top = 47
       DefaultItemHeight = 32
     end
     inherited FileInfoPanel: TPanel
-      Top = 418
+      Top = 403
+      inherited PathEdit: TLabeledEdit
+        Height = 23
+        EditLabel.Height = 15
+        EditLabel.Top = 6
+      end
       inherited AddButton: TButton
         OnClick = nil
       end
+    end
+    inherited TreeFilterEdit1: TTreeFilterEdit
+      Height = 23
     end
   end
   object ToolBar1: TToolBar
     Left = 0
     Height = 36
     Top = 0
-    Width = 1304
+    Width = 1324
     Caption = 'ToolBar1'
     TabOrder = 2
     OnPaint = ToolBar1Paint
@@ -57,7 +66,7 @@ object MainForm: TMainForm
       Left = 1
       Height = 32
       Top = 2
-      Width = 1303
+      Width = 1323
       Align = alTop
       Position = 264
       object PairSplitterSide1: TPairSplitterSide
@@ -778,8 +787,8 @@ object MainForm: TMainForm
         Left = 269
         Height = 32
         Top = 0
-        Width = 1034
-        ClientWidth = 1034
+        Width = 1054
+        ClientWidth = 1054
         ClientHeight = 32
         object RunBtn: TSpeedButton
           Left = 0
@@ -960,13 +969,13 @@ object MainForm: TMainForm
         end
         object SelectModeBox: TComboBox
           Left = 80
-          Height = 33
+          Height = 23
           Hint = 'Modus'
-          Top = -2
+          Top = 3
           Width = 100
           Anchors = [akLeft]
           AutoSize = False
-          ItemHeight = 25
+          ItemHeight = 15
           ItemIndex = 0
           Items.Strings = (
             'Debug'
@@ -985,8 +994,8 @@ object MainForm: TMainForm
   object OutputBox: TListBox
     Left = 0
     Height = 96
-    Top = 633
-    Width = 1304
+    Top = 618
+    Width = 1324
     Align = alBottom
     ItemHeight = 0
     TabOrder = 3
