--- a/Editor/formeditor.lfm
+++ b/Editor/formeditor.lfm
@@ -13,12 +13,12 @@ object FormEditFrame: TFormEditFrame
     Height = 563
     Top = 0
     Width = 625
-    HorzScrollBar.Increment = 5
-    HorzScrollBar.Page = 50
+    HorzScrollBar.Increment = 6
+    HorzScrollBar.Page = 68
     HorzScrollBar.Smooth = True
     HorzScrollBar.Tracking = True
-    VertScrollBar.Increment = 2
-    VertScrollBar.Page = 23
+    VertScrollBar.Increment = 3
+    VertScrollBar.Page = 33
     VertScrollBar.Smooth = True
     VertScrollBar.Tracking = True
     Align = alClient
@@ -30,9 +30,9 @@ object FormEditFrame: TFormEditFrame
     OnPaint = EditorScrollBoxPaint
     object FormCaptionLabel: TLabel
       Left = 16
-      Height = 15
+      Height = 25
       Top = 8
-      Width = 34
+      Width = 52
       Caption = 'Form1'
       ParentColor = False
       ParentFont = False
@@ -54,17 +54,17 @@ object FormEditFrame: TFormEditFrame
       Height = 256
       Top = 307
       Width = 271
-      ActivePage = ControlProps
+      ActivePage = ControlEvents
       Align = alBottom
-      TabIndex = 0
+      TabIndex = 1
       TabOrder = 0
       object ControlProps: TTabSheet
         Caption = 'Eigenschaften'
-        ClientHeight = 912
-        ClientWidth = 1052
+        ClientHeight = 218
+        ClientWidth = 263
         object PropEditor: TTIPropertyGrid
           Left = 0
-          Height = 228
+          Height = 218
           Top = 0
           Width = 263
           Align = alClient
@@ -80,8 +80,8 @@ object FormEditFrame: TFormEditFrame
       end
       object ControlEvents: TTabSheet
         Caption = 'Ereignisse'
-        ClientHeight = 3488
-        ClientWidth = 4208
+        ClientHeight = 218
+        ClientWidth = 263
         object EventEditor: TValueListEditor
           Left = 0
           Height = 218
@@ -106,18 +106,18 @@ object FormEditFrame: TFormEditFrame
           OnGetPickList = EventEditorGetPickList
           ColWidths = (
             64
-            181
+            198
           )
         end
       end
     end
     object FormControlView: TTreeView
       Left = 0
-      Height = 284
-      Top = 23
+      Height = 274
+      Top = 33
       Width = 271
       Align = alClient
-      DefaultItemHeight = 26
+      DefaultItemHeight = 28
       Images = ImageList1
       MultiSelect = True
       MultiSelectStyle = [msControlSelect, msShiftSelect]
@@ -129,7 +129,7 @@ object FormEditFrame: TFormEditFrame
     end
     object TreeFilterEdit1: TTreeFilterEdit
       Left = 0
-      Height = 23
+      Height = 33
       Top = 0
       Width = 271
       ButtonWidth = 23
@@ -194,8 +194,8 @@ object FormEditFrame: TFormEditFrame
     Anchors = [akRight, akBottom]
     BevelOuter = bvNone
     BorderStyle = bsSingle
-    ClientHeight = 45
-    ClientWidth = 80
+    ClientHeight = 41
+    ClientWidth = 76
     TabOrder = 3
     object PositionPicker: TPaintBox
       Left = 0
